objects/copadovsm__Value_Stream_Map_Event__c.object
<CustomObject>
    <fields>
        <fullName>copadovsm__Elapse_Time__c</fullName>
        <formula>IF(ISNULL(copadovsm__End_Date__c),NOW()-copadovsm__Start_Date__c,copadovsm__End_Date__c-copadovsm__Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapse Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadovsm__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadovsm__Event_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Event Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadovsm__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Lead_Time__c</fullName>
        <formula>(copadovsm__End_Date__c-copadovsm__Start_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadovsm__Operator_Id__c</fullName>
        <label>Operator Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadovsm__Process_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Block</label>
        <referenceTo>copadovsm__Process_Block__c</referenceTo>
        <relationshipName>Value_Stream_Map_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadovsm__Re_entry__c</fullName>
        <label>Re-entry</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadovsm__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>copadovsm__Stage__c</referenceTo>
        <relationshipLabel>Value Stream Map Events</relationshipLabel>
        <relationshipName>Value_Stream_Map_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadovsm__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadovsm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadovsm__Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Value Stream Map Event</label>
    <nameField>
        <displayFormat>EV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Map Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>